@startuml

title __SERVICES's Class Diagram__\n

  namespace com.pis.buy2gether {
    namespace provider {
      namespace services {
        class com.pis.buy2gether.provider.services.Firebase {
            {static} # db : FirebaseFirestore
            {static} # st : FirebaseStorage
            + Firebase()
            + getUserInfo()
        }
      }
    }
  }
  

  namespace com.pis.buy2gether {
    namespace provider {
      namespace services {
        class com.pis.buy2gether.provider.services.FirebaseComanda {
            + FirebaseComanda()
            + deleteComanda()
            + saveComanda()
        }
      }
    }
  }
  

  namespace com.pis.buy2gether {
    namespace provider {
      namespace services {
        enum FirebaseFactory {
          INSTANCE
          firebaseMap
        }
      }
    }
  }
  

  namespace com.pis.buy2gether {
    namespace provider {
      namespace services {
        class com.pis.buy2gether.provider.services.FirebaseGrup {
            + FirebaseGrup()
            + getGrup()
            + getGrup()
            + saveGrup()
        }
      }
    }
  }
  

  namespace com.pis.buy2gether {
    namespace provider {
      namespace services {
        class com.pis.buy2gether.provider.services.FirebaseImages {
            - ONE_MEGABYTE : long
            + FirebaseImages()
            + getImage()
            + saveImageBitmap()
            + saveImageUri()
        }
      }
    }
  }
  

  namespace com.pis.buy2gether {
    namespace provider {
      namespace services {
        enum FirebaseRDBService {
          INSTANCE
          db
        }
      }
    }
  }
  

  namespace com.pis.buy2gether {
    namespace provider {
      namespace services {
        class com.pis.buy2gether.provider.services.FirebaseUser {
            + FirebaseUser()
        }
      }
    }
  }
  

  com.pis.buy2gether.provider.services.FirebaseComanda -up-|> com.pis.buy2gether.provider.services.Firebase
  com.pis.buy2gether.provider.services.FirebaseGrup -up-|> com.pis.buy2gether.provider.services.Firebase
  com.pis.buy2gether.provider.services.FirebaseImages -up-|> com.pis.buy2gether.provider.services.Firebase
  com.pis.buy2gether.provider.services.FirebaseUser -up-|> com.pis.buy2gether.provider.services.Firebase


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
